--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "file-system-db": "^2.1.0",
+    "jwt-decode": "^4.0.0",
     "puppeteer": "^23.3.0"
   }
 }
