--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
   "name": "tv-time-liberator",
   "version": "1.0.0",
-  "main": "src/cli/index.ts",
-  "scripts": {
-    "start": "bun run src/cli/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "",
-  "license": "ISC",
-  "description": "",
+  "type": "module",
+  "main": "src/cli/index.ts",
   "dependencies": {
     "axios": "^1.7.7",
     "file-system-db": "^2.1.0",
     "jwt-decode": "^4.0.0",
     "puppeteer": "^23.3.0"
+  },
+  "description": "",
+  "license": "ISC",
+  "scripts": {
+    "extension": "cd src/extension && bun dev",
+    "cli": "bun run src/cli/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "@types/webextension-polyfill": "^0.12.1",
+    "typescript": "^5.6.2",
+    "vite": "5.0.0",
+    "vite-plugin-web-extension": "^4.1.6",
+    "webextension-polyfill": "^0.12.0"
   }
 }
