feat: export data via chrome extension

--- a/src/extension/src/manifest.json
+++ b/src/extension/src/manifest.json
@@ -8,6 +8,23 @@
     "96": "icon/96.png",
     "128": "icon/128.png"
   },
+  "host_permissions": [
+    "https://app.tvtime.com/*"
+  ],
+  "content_scripts": [
+    {
+      "matches": [
+        "https://app.tvtime.com/*"
+      ],
+      "js": [
+        "src/content.ts"
+      ]
+    }
+  ],
+  "permissions": [
+    "storage",
+    "tabs"
+  ],
   "{{chrome}}.action": {
     "default_popup": "src/popup.html"
   },
@@ -16,6 +33,8 @@
   },
   "background": {
     "{{chrome}}.service_worker": "src/background.ts",
-    "{{firefox}}.scripts": ["src/background.ts"]
+    "{{firefox}}.scripts": [
+      "src/background.ts"
+    ]
   }
 }
