--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "scripts": {
     "extension": "cd src/extension && bun dev",
     "cli": "bun run src/cli/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "bun test src"
   },
   "devDependencies": {
+    "@types/bun": "^1.1.9",
     "@types/webextension-polyfill": "^0.12.1",
     "typescript": "^5.6.2",
     "vite": "5.0.0",
