--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "src/cli/index.ts",
   "dependencies": {
+    "cli-progress": "^3.12.0",
     "file-system-db": "^2.1.0",
     "jwt-decode": "^4.0.0",
     "node-html-parser": "^6.1.13",
@@ -24,6 +25,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "@tsconfig/svelte": "^5.0.4",
     "@types/bun": "^1.1.9",
+    "@types/cli-progress": "^3.11.6",
     "@types/webextension-polyfill": "^0.12.1",
     "svelte": "^4.2.19",
     "svelte-check": "^4.0.2",
