--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jwt-decode": "^4.0.0",
     "node-html-parser": "^6.1.13",
     "puppeteer": "^23.3.0",
+    "rxjs": "^7.8.1",
     "ts-retry": "^5.0.1",
     "webextension-polyfill": "^0.12.0"
   },
