--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-html-parser": "^6.1.13",
     "puppeteer": "^23.3.0",
     "rxjs": "^7.8.1",
+    "simple-eta": "^3.0.2",
     "ts-retry": "^5.0.1",
     "webextension-polyfill": "^0.12.0"
   },
