--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/cli/index.ts",
   "dependencies": {
     "cli-progress": "^3.12.0",
+    "csv-stringify": "^6.5.1",
     "file-system-db": "^2.1.0",
     "jwt-decode": "^4.0.0",
     "node-html-parser": "^6.1.13",
