chore(extension): add description and humanize name

--- a/src/extension/package.json
+++ b/src/extension/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tv-time-liberator-extension",
+  "description": "Easily export your watch history, favorites, and lists from TV Time. Perfect for backup, migration, or analysis.",
   "private": true,
   "version": "1.0.0",
   "type": "module",
