--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "src/cli/index.ts",
   "dependencies": {
+    "@std/csv": "npm:@jsr/std__csv",
     "cli-progress": "^3.12.0",
-    "csv-stringify": "^6.5.1",
     "file-system-db": "^2.1.0",
     "jwt-decode": "^4.0.0",
     "puppeteer": "^23.3.0",
