--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Upload to Chrome Web Store
         uses: mobilefirstllc/cws-publish@latest
         with:
-          action: "upload"
+          action: "publish"
           client_id: ${{ secrets.GOOGLE_CLIENT }}
           client_secret: ${{ secrets.GOOGLE_SECRET }}
           refresh_token: ${{ secrets.GOOGLE_REFRESH_TOKEN}}
